--- a/golang/official_go_learning/03.md
+++ b/golang/official_go_learning/03.md
@@ -1,17 +1,33 @@
 # 名称
 
-就像其他语言一样，名称在 Go 中也很重要。Go 中的名称甚至有语法上的影响：名称的首字母是否大写影响一个名字在包外的可见性。因此值得花一些时间来聊聊 Go 程序中的名称惯例及规范。
+和其他编程语言类似，命名在 Go 语言中也很讲究。Go 中的命名甚至属于语法的一部分：名称的首字母是否大写决定这个名称在包外的可见性。因此很有必要花一些时间来了解 Go 程序中的命名规范。
 
 ## 包名
 
-当包被导入后，包名会成为其内容的访问器。在 import "byte" 后，导入此包的文件可以使用 bytes.Buffer。如果使用这个包的人都通过包名称调用包里的内容，这就意味着包名称应该足够好：短、简介、释义。按照惯例，包名应该是小写字符、独立单词的名称；他们应该不包含下划线或驼峰式名称。简而言之，因为每个使用你的包的人都会输入你的包名。不需要担心和已经存在的包重名冲突；包名只用于导入此包时的默认名称，并没有必要在所有的源码中都保持唯一，在少有的导入包名称冲突的情况下，可以给冲突的包定义一个不冲突的本地名称来使用。因为文件名称决定了使用的是哪个包，因此任何情况下都很少出现混淆。
+当包被导入（import）后，包名会成为包的访问器。比如，在 `import "bytes"` 后，导入此包的文件就可以使用 `bytes.Buffer` 来访问 `bytes` 包内的 `Buffer` 结构体了。如果使用某包的所有源代码都通过包名调用这个包的内容，这就意味着这个包的包名名称应该足够好：短、简洁且释义。按照惯例，包名应该是小写字符、且应该是一个独立的单词；包名里不应该包含下划线，也不应该是驼峰样式的名称。如果你定义了一个包，包名应该尽可能地简单，因为每个使用这个包的人都需要一个字符一个字符地把包名敲出来（字符太多敲起来麻烦）；我们不需要担心我们的包名和已经存在的包名称上会冲突；对于导入某个包的源码来说，包名指定了默认的访问器名称，不过没有必要在所有导入这个包的源码中都使用这个默认的名称。
 
-另一个惯例，是包名一般设置为它的源文件目录名，目录 src/encoding/base64 定义的包引入时是 "encoding/base64"，可以使用 base64 来引用包里的内容，不能写成 encoding_base64，也不能写成 encodingBase64。
+很少的情况下，同一个源文件中导入的两个包可能有相同的包名，这时候给冲突的包定义一个新的本地访问器名称就可以了。
 
-一个包的导入器会使用它的名称来引用其内容，因此在包中导出的名字可以避免含糊不清。（不要使用 import . 符号，虽然它可以简化必须在包外面进行的测试，但是仍然应该避免使用）比如，在 bufio 包中带缓存的读类型是 Reader 而不是 BufReader, 因为当用户看到 bufio.Reader 的时候就已经知道这是个带缓存的 Reader，简洁又准确。进一步讲，因为被导入的实体经常与他们的包名一起取用，因此 bufio.Reader 和 io.Reader 是不冲突的。类似的，一个创建 ring.Ring（它是 Go 中的一个构造器） 新对象的函数正常情况下可以命名为 NewRing，但是因为 Ring 是包唯一导出的类型，并且因为包名叫 ring，因此这个方法可以命名为 New，这样这个包的客户端就可以通过 ring.New 使用它了。使用包的结构来帮助你选择好的名称吧。
+```go
+import (
+	"github.com/chalvern/sugar"
+	log "github.com/chalvern/sugar"
+)
+
+// 同样都是 "github.com/chalvern/sugar"，但是可以设置不同的别名
+// 如果不设置别名，默认是 `sugar`
+sugar.Info("hello sugar")
+log.Info("hello log")
+```
+
+导入包的时候使用的是包的全路径（比如 `"github.com/chalvern/sugar"`），它唯一决定了使用的是哪个包，因此即使出现了另一个名为 `sugar` 的包，使用上也不会出现混淆。
+
+另一个约定是，包名一般设置为它的源文件所在的目录名，比如目录 `src/encoding/base64` 定义的包引入时的路径是 `"encoding/base64"`，我们应该把包名定义为`base64`，不应该写成 encoding_base64，也不应该写成 encodingBase64。
+
+一个包被导入后一般通过它的包名来访问其内容，因此在包中导出的名字可以借助包名来避免含糊不清（不要在源文件中使用 `import . package/name` 的方式导入包，否则包里的名称很容易与源文件夹中的名称混淆）。比如，在 `bufio` 包里带缓存的读类型应该是 Reader 而不是 BufReader, 因为当开发者看到 `bufio.Reader` 的时候就已经知道这是个带缓存的 Reader 了，这种方式的定义不仅简洁而且不失准确性。进一步讲，因为被导入的实体经常与他们的包名一起取用，因此 `bufio.Reader` 和 `io.Reader` 虽然都是 `Reader` 但是二者是不会冲突的。同样的道理，对于包 [ring](https://golang.google.cn/pkg/container/ring/)，包里包含唯一导出的 `Ring` 结构体，创建 `Ring` 的新对象的函数按一般的思维可以被命名为 `NewRing()`，但是因为 `Ring` 是包里唯一导出的类型，并且因为包名叫 `ring`，因此这个创建新对象的方法可以命名为 `New()`，这样使用这个包的调用方就可以通过 `ring.New()` 来创建 `Ring` 的对象了（是不是感觉很简单）。总之，根据包的这些使用规范来选择一个好名称吧。
 
 
-另一个短小的例子是 once.Do，once.Do(setup) 读起来很通顺，如果写成 once.DoOrWaitUntilDone(setup) 好像也不能让它变得更好。长的名字并不会自然而然地让事物更具有可读性。帮助性的注释文档往往有更高的价值，而不是特别长的名称。
+另一个短小精悍的例子是 `once.Do`，`once.Do(setup)` 读起来自然且流畅，如果把名字改成 `once.DoOrWaitUntilDone(setup)` 好像并没有必要。长名称并不会让事物更具有可读性。相对于长的命名方式，注释文档往往具有有更高的价值。
 
 ## 获取器(Getters)
 
